--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Website  Manasiiiiiiiii</h1>
+        <h1>Welcome to My Website  Manasiiiiiiiii Tidke</h1>
         <p>This is a basic example of an HTML file that you can serve using an Apache web server in a Docker container.</p>
-        <h2>Manasi Madhavrao Tidkeeeeeeeeeeeeeee</h2>
+        <h2>Manasi Madhavrao Tidkeeeeeeeeeeeeeee </h2>
     </div>
 </body>
 </html>
