--- a/index.html
+++ b/index.html
@@ -11,27 +11,49 @@
             padding: 0;
             background-color: #f0f0f0;
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
+        header {
+            background-color: #333;
+            color: #fff;
             padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
-        h1 {
-            color: #333;
+        nav {
+            background-color: #444;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
         }
-        p {
-            color: #666;
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My Website  Manasiiiiiiiii Tidke</h1>
-        <p>This is a basic example of an HTML file that you can serve using an Apache web server in a Docker container.</p>
-        <h2>My name is Manasi </h2>
-    </div>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
+    <section>
+        <h2>About Us</h2>
+        <p>This is a simple website created with HTML.</p>
+    </section>
+    <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
