--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <a href="#">Contact</a>
     </nav>
     <section>
+        <h1>Manasi Tidke</h1>
         <h2>About Us</h2>
         <p>This is a simple website created with HTML.</p>
     </section>
